@@ -155,6 +155,7 @@
     <ClCompile Include="..\..\src\plugins\BeyerSwinehart.cpp" />
     <ClCompile Include="..\..\src\plugins\BoltzmannDistribution.cpp" />
     <ClCompile Include="..\..\src\plugins\CanonicalRateCoefficient.cpp" />
+    <ClCompile Include="..\..\src\plugins\PhaseIntegrals.cpp" />
     <ClCompile Include="..\..\src\plugins\uFTST.cpp" />
     <ClCompile Include="..\..\src\plugins\ClassicalCoupledRotors.cpp" />
     <ClCompile Include="..\..\src\plugins\ClassicalRotor.cpp" />
