@@ -1,0 +1,170 @@
+//-------------------------------------------------------------------------------------------
+//
+// PhaseIntergrals.cpp
+//
+// Author: Struan Robertson
+// Date:   April/2019
+//
+// This file contains the definitions of the various phase integrals needed for
+// microcanonical (NOT J resolved) flexible transition state theory.
+//
+//-------------------------------------------------------------------------------------------
+
+#include "PhaseIntergrals.h"
+#include "../gDensityOfStates.h"
+#include "../Reaction.h"
+#include "../Sobol.h"
+
+using namespace std;
+using namespace Constants;
+
+namespace mesmer
+{
+
+  void PhaseIntegral::initialize(Molecule* Frag1, Molecule* Frag2, Reaction* pReact) {
+    m_Frag1 = Frag1;
+    m_Frag2 = Frag2;
+
+    m_MaxCell = pReact->getEnv().MaxCell;;
+    m_cellSize = pReact->getEnv().CellSize;;
+
+    // Calculate the reduced mass.
+    m_Frag1->getStruc().ReadStructure();
+    m_Frag2->getStruc().ReadStructure();
+    double m1 = m_Frag1->getStruc().CalcMW();
+    double m2 = m_Frag2->getStruc().CalcMW();
+    m_mu = m1 * m2 / (m1 + m2);
+
+    m_top1 = m_Frag1->getDOS().get_rotType();
+    m_top2 = m_Frag2->getDOS().get_rotType();
+
+    PersistPtr pp = pReact->get_PersistentPointer()->XmlMoveTo("me:MCRCMethod");
+    m_Sym = pp->XmlReadInteger("me:SymmetryNumber", optional);
+    int MCpnts = pp->XmlReadInteger("me:MCPoints", optional);
+    if (MCpnts > 0)
+      m_MCPnts = size_t(MCpnts);
+    else
+      cerr << "Number of of Monte-Carlo points for coupled rotors method must be greater than 0." << endl;
+
+  };
+
+  void PhaseIntegral::convolveExcessEnergy(size_t TDOF, vector<double> &cellSOS) {
+
+    vector<double> tmpCellSOS(cellSOS);
+    vector<double> ene(cellSOS.size(), 0.0);
+    getCellEnergies(cellSOS.size(), m_cellSize, ene);
+    double pwr = 0.5*double(TDOF) - 1.0;
+    for (size_t j(0); j < ene.size(); ++j) {
+      ene[j] = pow(ene[j], pwr);
+    }
+    FastLaplaceConvolution(tmpCellSOS, ene, cellSOS);
+
+  }
+
+
+  void NLnrAtmTops::integrate(double rxnCrd, vector<double> &cellSOS) {
+
+    double ant = getConvertedEnergy("kcal/mol", 164.0);
+    double bnt = 0.43;
+    m_V0 = ant * exp(-bnt * rxnCrd*rxnCrd);
+
+    Molecule *top = (m_top1 == NONLINEAR) ? m_Frag1 : m_Frag2;
+
+    const size_t MaximumCell = cellSOS.size();
+    const double cellSize = m_cellSize;
+    const size_t TDOF = m_nIDOF + 3;
+
+    // Instantiate a random vector generator.
+    Sobol sobol;
+
+    // Configuration loop.
+    long long seed(17);
+    m_knmtcFctr.resize(m_MCPnts, 0.0);
+    m_potential.resize(m_MCPnts, 0.0);
+    for (size_t i(0); i < m_MCPnts; ++i) {
+
+      // Select angular coordinates.
+      vector<double> angles(m_nIDOF, 0.0);
+      sobol.sobol(angles.size(), &seed, angles);
+      double gamma = M_PI * angles[0];
+      double phi = 2.0 *  M_PI * angles[1];
+
+      // Calculate the determinant of the Wilson G Matrix.
+      m_knmtcFctr[i] = sin(gamma);
+
+      // Calculate potential energy.
+      m_potential[i] = ptnl(rxnCrd, gamma, phi);
+    }
+
+    //// Restore rotatable bond IDs.
+    //gs.setRotBondID(SavedRotBondIDs);
+
+    // Heavyside function integration.
+    for (size_t i(0); i < m_MCPnts; ++i) {
+      double kfctr = m_knmtcFctr[i];
+      double ptnl = m_potential[i];
+      size_t ll = size_t(ptnl / cellSize);
+      for (size_t j(ll); j < cellSOS.size(); ++j) {
+        cellSOS[j] += kfctr;
+      }
+    }
+
+    // Conversion and symmetry number factor.
+    vector<double> MntsInt;
+    top->getDOS().get_rotConsts(MntsInt);
+    double orbitalInertia = m_mu * rxnCrd*rxnCrd / conMntInt2RotCnt;
+    double RotCnt = orbitalInertia / sqrt(MntsInt[0] * MntsInt[1] * MntsInt[2]);
+    double cnt = 2.0*M_PI*RotCnt / double(3.0*m_MCPnts*m_Sym);
+    for (size_t j(0); j < cellSOS.size(); ++j) {
+      cellSOS[j] *= cnt;
+    }
+
+    // Convolve with remaining energy contributions.
+    convolveExcessEnergy(TDOF, cellSOS);
+
+#ifdef _DEBUG
+
+    // The following is a specific test for the CH3 + H system taken from JPC 101, 9974 (1997).
+
+    vector<double> ene(cellSOS.size(), 0.0);
+    cellSOS = ene;
+    getCellEnergies(MaximumCell, cellSize, ene);
+    size_t jj = size_t(m_V0);
+    for (size_t j(0); j < jj; ++j) {
+      cellSOS[j] = 1.0 / (2.0*sqrt(m_V0*m_V0 - m_V0 * ene[j]));
+    }
+
+    // Convolve with remaining energy contributions.
+    pwr = 0.5*double(TDOF);
+    cnt = 4.0*RotCnt / (15.0*m_Sym);
+    for (size_t j(0); j < ene.size(); ++j) {
+      ene[j] += 2.0*cnt * pow(ene[j], pwr);
+    }
+    FastLaplaceConvolution(cellSOS, ene, tmpCellDOS);
+
+
+    ctest << endl;
+    ctest << "  115 " << formatFloat(wrk[154], 6, 14) << formatFloat(tmpCellDOS[154], 6, 14) << endl;
+    ctest << "  248 " << formatFloat(wrk[247], 6, 14) << formatFloat(tmpCellDOS[247], 6, 14) << endl;
+    ctest << "  413 " << formatFloat(wrk[412], 6, 14) << formatFloat(tmpCellDOS[412], 6, 14) << endl;
+    ctest << "  624 " << formatFloat(wrk[623], 6, 14) << formatFloat(tmpCellDOS[623], 6, 14) << endl;
+    ctest << " 1040 " << formatFloat(wrk[1039], 6, 14) << formatFloat(tmpCellDOS[1039], 6, 14) << endl;
+    ctest << " 1248 " << formatFloat(wrk[1247], 6, 14) << formatFloat(tmpCellDOS[1247], 6, 14) << endl;
+    ctest << " 2007 " << formatFloat(wrk[2006], 6, 14) << formatFloat(tmpCellDOS[2006], 6, 14) << endl;
+    ctest << " 2080 " << formatFloat(wrk[2079], 6, 14) << formatFloat(tmpCellDOS[2079], 6, 14) << endl;
+    ctest << " 2600 " << formatFloat(wrk[2599], 6, 14) << formatFloat(tmpCellDOS[2599], 6, 14) << endl;
+    ctest << " 3120 " << formatFloat(wrk[3119], 6, 14) << formatFloat(tmpCellDOS[3119], 6, 14) << endl;
+    ctest << " 3419 " << formatFloat(wrk[3418], 6, 14) << formatFloat(tmpCellDOS[3418], 6, 14) << endl;
+    ctest << " 4015 " << formatFloat(wrk[4014], 6, 14) << formatFloat(tmpCellDOS[4014], 6, 14) << endl;
+    ctest << " 4445 " << formatFloat(wrk[4444], 6, 14) << formatFloat(tmpCellDOS[4444], 6, 14) << endl;
+    ctest << " 5554 " << formatFloat(wrk[5553], 6, 14) << formatFloat(tmpCellDOS[5553], 6, 14) << endl;
+    ctest << endl;
+
+    wrk = tmpCellDOS;
+
+#endif
+
+  }
+
+
+}
